syntax = "proto3";

package yandex.cloud.events.iam.credential;

import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/iam/credential/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";


option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/iam/credential;iam";
option java_package = "yandex.cloud.api.events.iam.credential";
option java_outer_classname = "CreateCookieEvents";

message CreateIamCookieFromPassportCookies {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    IamCredentialEventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        MaskedPassportCookies masked_passport_cookies = 1 [(required) = true];
        OAuthRequest oauth_request = 2;
        string session_id = 3;
        string user_account_id = 4 [(required) = true];
        string passport_login = 5;
        string masked_iam_cookie = 6 [(required) = true];
        google.protobuf.Timestamp issued_at = 7 [(required) = true];
        google.protobuf.Timestamp expires_at = 8 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message CreateIamCookieForSubject {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    IamCredentialEventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string subject_id = 1 [(required) = true];
        Authentication.SubjectType subject_type = 2 [(required) = true];
        string federation_id = 8;
        OAuthRequest oauth_request = 3;
        string session_id = 4;
        string masked_iam_cookie = 5 [(required) = true];
        google.protobuf.Timestamp issued_at = 6 [(required) = true];
        google.protobuf.Timestamp expires_at = 7 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}
